style: add margin-top to h3
feat: user input of city store in localstorage and retrieve to render on a button

chore: add h3 title

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,10 @@ body {
 	padding: 0 1em 0 1em;
 }
 
+h3 {
+	margin-top: 1em;
+}
+
 .next-days__wraper {
 	grid-area: next-days__wraper;
 	padding: 0.5em;
